@@ -6708,7 +6708,7 @@ report_description_option:
 | _with CODE _is id_or_lit
   {
 	check_repeated ("CODE", SYN_CLAUSE_2, &check_duplicate);
-	current_report->code_clause = $3;
+	current_report->code_clause = $4;
   }
 | control_clause
 | page_limit_clause
@@ -6801,8 +6801,6 @@ page_line_column:
 	} else {
 		current_report->t_lines = $1;
 	}
-	/* may be repeated later by page detail */
-	check_repeated ("LINE LIMIT", SYN_CLAUSE_5, &check_duplicate);
   }
 | page_limit_cols
 | report_int_ident line_or_lines page_limit_cols
@@ -6815,14 +6813,14 @@ page_line_column:
 	} else {
 		current_report->t_lines = $1;
 	}
-	/* may be repeated later by page detail */
-	check_repeated ("LINE LIMIT", SYN_CLAUSE_5, &check_duplicate);
   }
 ;
 
 page_limit_cols:
   report_int_ident columns_or_cols
   {
+	/* may be repeated later by page detail */
+	check_repeated ("LINE LIMIT", SYN_CLAUSE_5, &check_duplicate);
 	if (CB_LITERAL_P ($1)) {
 		current_report->columns = cb_get_int ($1);
 	} else {
