@@ -1,4 +1,11 @@
 
+2018-02-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* parser.y (report_description_option): fixed reference for CODE IS
+	* parser.y (page_line_column): adjusted check for duplicate LINE LIMIT
+	* codegen.c (output_internal_function): fixed position of
+	  initialization for report files in INITIAL programs
+
 2018-02-16  Dave Pitts <dpitts@cozx.com>
 
 	* cobc.c (get_next_token): BUG #494 Fixed scanning of tokens with 
